<resources>
    <string name="app_name">TourGuider</string>
    <string name="txt_loading">Loading</string>
    <string name="titre_app">TOUR GUIDER</string>
    <string name="describe">going out of your comfort zone to open yourself up the experience and beauty that life gives you, no matter what path you choose to go on</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create an account</string>
    <string name="skip"><u>SKIP</u></string>
    <string name="welcome_back">Welcome</string>
    <string name="discover">There\'s a lot to discover</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me  </string>
    <string name="login_sign_up_hint">Don\'t have an account? <u>Sign Up</u></string>
    <string name="txtPassForgot"><u>Forgot password?</u></string>
    <string name="register">Sign up</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_login_hint">Already have an account? <u>Sign In</u></string>
    <string name="btn_login">Login</string>
    <string name="hint_name">Name</string>
    <string name="btn_register">Register</string>
    <string name="login_background">login background</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="desc_password">Enter your email address you\'re using for your account below and we will send you a password reset link</string>
    <string name="email_forgot_password_hint">Type Your Email</string>
    <string name="send">SEND</string>
    <string name="tour_guider">Tour guider</string>
    <string name="Reset_password">Reset Your Password?</string>
    <string name="desc_reset_password">Enter your new password for your TourGuider account.</string>
    <string name="done">DONE</string>
    <string name="tour_guider_menu">TourGuider</string>
    <string name="manage_account">Manage account</string>
    <string name="plans">Plans</string>
    <string name="wish_list">Wish list</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="send_feedback">Send feedback</string>
    <string name="lbl_explore">Explore</string>
    <string name="lbl_map">Map</string>
    <string name="lbl_wish_list">Wish list</string>
    <string name="lbl_plans">Plans</string>
    <string name="nador">Nador</string>
    <string name="saidia">Saidia</string>
    <string name="tanger">Tanger</string>
    <string name="marrakesh">Marrakesh</string>
    <string name="tetouane">Tetouane</string>
    <string name="elhouciema">Elhouciema</string>
    <string name="start_your_journey">Start your Journey</string>
    <string name="drink">To Drink</string>
    <string name="eat">To Eat</string>
    <string name="visit">To Visit</string>
    <string name="sleep">To Sleep</string>
    <string name="travel">To Travel</string>
    <string name="explore">Explore</string>
    <string name="map">MAP</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="create_your_account">Create your account</string>
</resources>
