<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_manage_account"
            android:title="@string/manage_account" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_plans"
            android:title="@string/plans" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_wish_list"
            android:title="@string/wish_list" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/terms_condition"

            android:title="@string/terms_and_conditions" />
        <item
            android:id="@+id/feedback"

            android:title="@string/send_feedback" />

    </group>

</menu>