<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius"
    tools:targetApi="lollipop">
    <LinearLayout
        style="@style/linearParent"
        android:layout_height="461dp"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_marginTop="10dp"

            app:srcCompat="@drawable/reset_password_img"
            android:contentDescription="@string/todo" />

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/ViewsMargin"
            android:text="@string/Reset_password"
            android:textSize="20sp" />

        <TextView
            style="@style/viewParent"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:text="@string/desc_reset_password"
            android:textColor="#707070"
            android:textSize="12sp"
            android:layout_marginEnd="20dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/sign_up_text_margin_top">

            <EditText
                android:id="@+id/txtPassword"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_action_lock"
                android:drawableLeft="@drawable/ic_action_lock"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:autofillHints="" />
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword1"
            style="@style/parent"
            android:layout_marginTop="@dimen/sign_up_text_margin_top"
            android:drawableLeft="@drawable/ic_action_lock"
            app:passwordToggleEnabled="true"
            android:drawableStart="@drawable/ic_action_lock">

            <EditText
                android:id="@+id/txtConfirmPassword"
                style="@style/modifiedEditText"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnDone"
            style="@style/loginButton"
            android:layout_width="100dp"
            android:layout_gravity="right"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/loginBkColor"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.cardview.widget.CardView>