<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChooseActivity"
    android:background="@drawable/start_bk">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/titre_app"
                android:textColor="@color/mainGray"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="250dp"
                android:layout_height="5dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="left"
                android:layout_weight="0"
                android:background="@drawable/background_bar"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="55dp"
                android:layout_marginRight="55dp"
                android:fitsSystemWindows="false"
                android:fontFamily="casual"
                android:freezesText="false"
                android:gravity="left"
                android:text="@string/describe"
                android:textColor="@color/whiteTextColor"
                android:textSize="10sp"
                android:textStyle="normal|bold"
                tools:ignore="RtlHardcoded,SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/mainGray"
                android:minWidth="300dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background_white"
                android:minWidth="300dp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="15dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded"
                android:layout_marginEnd="15dp">
                <TextView
                    android:id="@+id/passForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:onClick="clickSkip"
                    android:text="@string/skip"
                    android:textColor="#FFF"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>