<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".view.NadorActivity">

    <ImageView

        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/main_color" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_menu"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pasta_button"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/custom_blue_button"
                android:drawableLeft="@drawable/ic_drink"
                android:fontFamily="@font/segoe_print_fonts"
                android:paddingLeft="2dp"
                android:text="@string/drink"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="10dp" />

            <Button
                android:id="@+id/pizza_button"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_blue_button"
                android:drawableLeft="@drawable/ic_eat"
                android:fontFamily="@font/segoe_print_fonts"
                android:paddingLeft="2dp"
                android:text="@string/eat"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/salad_button"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_blue_button"
                android:drawableLeft="@drawable/ic_visit"
                android:fontFamily="@font/segoe_print_fonts"
                android:padding="2dp"
                android:text="@string/visit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/meat_button"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_blue_button"
                android:drawableStart="@drawable/ic_sleep"
                android:drawableLeft="@drawable/ic_sleep"
                android:fontFamily="@font/segoe_print_fonts"
                android:padding="2dp"
                android:text="@string/sleep"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/fries_button"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_blue_button"
                android:drawableLeft="@drawable/ic_travel"
                android:fontFamily="@font/segoe_print_fonts"
                android:paddingLeft="2dp"
                android:text="@string/travel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="26dp"
        android:searchIcon="@drawable/ic_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/app_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">


        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>