<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/white"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius"
    tools:targetApi="lollipop">

    <LinearLayout
        style="@style/linearParent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView15"
            style="@style/headerTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/main_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_your_account"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/sign_up_text_margin_top"
            tools:layout_marginTop="40dp">

            <EditText
                android:id="@+id/txtUserName"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/edit_text_bk"
                android:drawableStart="@drawable/ic_person"
                android:drawableLeft="@drawable/ic_person"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/sign_up_text_margin_top">

            <EditText
                android:id="@+id/txtEmail"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/edit_text_bk"

                android:drawableStart="@drawable/ic_mail"
                android:drawableLeft="@drawable/ic_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/sign_up_text_margin_top">

            <EditText
                android:id="@+id/txtPassword"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="41dp"

                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/edit_text_bk"
                android:drawableStart="@drawable/ic_action_lock"
                android:drawableLeft="@drawable/ic_action_lock"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword1"
            style="@style/parent"
            android:layout_marginTop="@dimen/sign_up_text_margin_top"
            android:drawableStart="@drawable/ic_action_lock"
            android:drawableLeft="@drawable/ic_action_lock"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtConfirmPassword"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints=""
                android:background="@drawable/edit_text_bk"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/btn_register"
            android:textColor="@color/loginBkColor" />

        <TextView
            android:id="@+id/txtSignIn"
            style="@style/parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:onClick="viewLoginClick"
            android:text="@string/sign_up_login_hint"
            android:textAlignment="center"
            android:textColor="@color/main_color"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>

</androidx.cardview.widget.CardView>